--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <title>RPJPN 2025 - 2045</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="%PUBLIC_URL%/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/templatemo-space-dynamic.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animated.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/owl.css">
+    <style>
+      
+    </style>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <!-- ***** Preloader Start ***** -->
+  <div id="js-preloader" class="js-preloader">
+    <div class="preloader-inner">
+      <span class="dot"></span>
+      <div class="dots">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </div>
+  <!-- ***** Preloader End ***** -->
+
+  <!-- ***** Header Area Start ***** -->
+  <header class="header-area header-sticky wow slideInDown" data-wow-duration="0.75s" data-wow-delay="0s">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Logo Start ***** -->
+            <a href="index.html" class="logo">
+              <p style="color: #03a4ed;font-weight: 700;font-size: 29px;padding-top: 13%;">RPJPN</p>
+              <p style="color: #fe3f40;font-size: 15px;"><span>2025 - 2045</span></p>
+            </a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Menu Start ***** -->
+            <ul class="nav">
+              <li class="scroll-to-section"><a href="#top" class="active">Beranda</a></li>
+              <li class="scroll-to-section"><a href="#about">Timeline</a></li>
+              <li class="scroll-to-section"><a href="bidang.html">Bidang RPJPN</a></li>
+              <li class="scroll-to-section"><a href="#portfolio">Jajak Pendapat</a></li>
+              <li class="scroll-to-section"><a href="#blog">File</a></li> 
+              <li class="scroll-to-section"><a href="#contact">Daftar Ahli</a></li> 
+              <li class="scroll-to-section"><div class="main-red-button"><a href="#contact"><p id="greeting" style="color: #ffffff;font-weight: 700;padding-top: 9%;">Sign Up</p></a></div></li> 
+            </ul>        
+            <a class='menu-trigger'>
+                <span>Menu</span>
+            </a>
+            <!-- ***** Menu End ***** -->
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- ***** Header Area End ***** -->
+
+  <div class="main-banner wow fadeIn" id="top" data-wow-duration="1s" data-wow-delay="0.5s">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-lg-6 align-self-center">
+              <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                <h6>Lorem Ipsum</h6>
+                <h2>Neque porro <em>quisquam est</em> &amp; <span>qui</span> dolorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliter.</p>
+                <!-- <form id="search" action="#" method="GET">
+                  <fieldset>
+                    <input type="address" name="address" class="email" placeholder="Your website URL..." autocomplete="on" required>
+                  </fieldset>
+                  <fieldset>
+                    <button type="submit" class="main-button">Analyze Site</button>
+                  </fieldset>
+                </form> -->
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
+                <img src="%PUBLIC_URL%/assets/images/picture2.png" class="img-fluid" style="width: 450px;" alt="team meeting">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="about" class="about-us section">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-lg-12">
+          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+            <img src="%PUBLIC_URL%/assets/images/timeline.jpg" style="border-radius: 25px;width: 800px;" class="shadow img-fluid" alt="person graphic">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
+          <p>© Copyright 2022
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Scripts -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/owl-carousel.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/animation.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/imagesloaded.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/templatemo-custom.js"></script>
+  <script type="text/javascript">
+    var text = ["Sign in ", "Sign Up"];
+    var counter = 0;
+    var elem = $("#greeting");
+    setInterval(change, 3000);
+    function change() {
+        elem.fadeOut(function(){
+            elem.html(text[counter]);
+            counter++;
+            if(counter >= text.length) { counter = 0; }
+            elem.fadeIn();
+        });
+    }
+  </script>
+
+</body>
 </html>
